--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                     </li>
                     <li class="item">
                         <span class="sub_text">Week 2:</span>
-                        <a href="#" class="sub_link">Design
+                        <a href="/lesson2/design.html" class="sub_link">Design
                             Principles</a>
                         <span class="divider">|</span>
                         <a href="#" class="sub_link">Hamburger</a>
                         <span class="divider">|</span>
-                        <a href="#"
-                            class="sub_link">Scriptures</a>
+                        <a href="/lesson2/bom.html"
+                            class="sub_link">Book of Mormon</a>
                     </li>
                     <li class="item">
                         <span class="sub_text">Week 3:</span>
