Fixed image path

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header">
         <div class="contents">
-            <img class="profile_picture" src="/images/my pic.webp"
+            <img class="profile_picture" src="images/my pic.webp"
                 alt="Profile" width="150" height="150">
             <h1 class="name">Charles Ayim</h1>
         </div>
