--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Charles Ayim portal for WDD 230 - Web Frontend Development">
     <meta name="author" content="Charles Ayim">
     <meta property="og:title" content="Charles Ayim WDD 230 Course Portal">
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="https://payim.github.io/wdd230/" >
     <meta property="og:image" content="https://www.florida-backroads-travel.com/images/melbournebeachocean.jpg">
     <title>Charles Ayim- WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -25,6 +25,7 @@
         </div>
     </header>
     <nav class="nav">
+    
         <ul class="contents">
             <li class="item"><a class="page_link active" href="/">Home</a></li>
             <li class="item"><a class="page_link" href="#">Chamber</a></li>
@@ -100,6 +101,7 @@
         <p class="text copyright">©<span id="year_container">2023</span> - Charles Ayim | Accra- Ghana</p>
         <p class="text last_modified" id="lastModified">Last Modification: 04/22/2023 06:45:30</p>
     </footer>
+    <script src="scripts/hamburgermenu.js"></script>
     <script src="scripts/getDates.js"></script>
 </body>
 
