--- a/lesson1/chamber/chamber-site-plan.html
+++ b/lesson1/chamber/chamber-site-plan.html
@@ -60,15 +60,13 @@
             <div>
                 <h2>Site Purpose</h2>
                 <p>
-                    The purpose of this site is to provide weather
-                    to those around the areas of Preston, Soda
-                    Springs, and Fish Haven.
+                    The purpose of this site is to provide good information about Ghana, and also 
+                    help people all over the world to know more aboiut Ghana.
                 </p>
                 <p>
                     With a simple layout and easy navigation, the
                     people of those areas can use this site to find
-                    the weather and any other information relating
-                    to weather about their location and around the area.
+                    tourist place to visit while in Ghana.
                 </p>
                 <h2>Wire frames</h2>
             </div>
