--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
             <h1 class="name">Charles Ayim</h1>
         </div>
     </header>
-    <nav class="nav">
-    
+    <nav class="nav">    
         <ul class="contents">
             <li class="item"><a class="page_link active" href="/">Home</a></li>
             <li class="item"><a class="page_link" href="#">Chamber</a></li>
-            <li class="item"><a class="page_link"
-                    href="/lesson1/chamber/chamber-site-plan.html">Site Plan</a></li>
+            <li class="item"><a class="page_link" href="/lesson1/chamber/chamber-site-plan.html">Site Plan</a></li>
             <li class="item"><a class="page_link" href="#">Survey</a></li>
         </ul>
     </nav>
