--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta name="description" content="Charles Ayim portal for WDD 230 - Web Frontend Development">
     <meta name="author" content="Charles Ayim">
     <meta property="og:title" content="Charles Ayim WDD 230 Course Portal">
-    <meta property="og:type" content="https://payim.github.io/wdd230/" >
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="https://www.florida-backroads-travel.com/images/melbournebeachocean.jpg">
+    <meta property="og:type" content="https://payim.github.io/wdd230/" >
     <title>Charles Ayim- WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/main.css">
@@ -28,7 +29,7 @@
         <ul class="contents">
             <li class="item"><a class="page_link active" href="/">Home</a></li>
             <li class="item"><a class="page_link" href="#">Chamber</a></li>
-            <li class="item"><a class="page_link" href="/lesson1/chamber/chamber-site-plan.html">Site Plan</a></li>
+            <li class="item"><a class="page_link" href="https://payim.github.io/wdd230/lesson1/chamber/chamber-site-plan.html">Site Plan</a></li>
             <li class="item"><a class="page_link" href="#">Survey</a></li>
         </ul>
     </nav>
