--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 </head>
 
 <body>
+    <div id="mode">
+        ☑️
+    </div>
     <header class="header">
         <div class="contents">
             <img class="profile_picture" src="images/my pic.webp"
@@ -25,7 +28,8 @@
             <h1 class="name">Charles Ayim</h1>
         </div>
     </header>
-    <nav class="nav">    
+    <a id="menu" href="#"></a>
+    <nav class="nav">  
         <ul class="contents">
             <li class="item"><a class="page_link active" href="/">Home</a></li>
             <li class="item"><a class="page_link" href="#">Chamber</a></li>
@@ -100,8 +104,9 @@
         <p class="text copyright">©<span id="year_container">2023</span> - Charles Ayim | Accra- Ghana</p>
         <p class="text last_modified" id="lastModified">Last Modification: 04/22/2023 06:45:30</p>
     </footer>
-    <script src="scripts/hamburgermenu.js"></script>
     <script src="scripts/getDates.js"></script>
+    <script src="scripts/hamburgermenu.js"></script>
+    <script src="scripts/darkmode.js"></script>
 </body>
 
 </html>
