--- a/lesson2/bom.html
+++ b/lesson2/bom.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM Manipulation | CHARLES AYIM</title>
     <meta name="description" content="DOM Manipulation">
-    <link rel="stylesheet" href="/lesson2/styles/page.css">
-    <link rel="stylesheet" href="/lesson2/styles/normalize.css">
+    <link rel="stylesheet" href="styles/page.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <script src="/lesson2/scripts/style.js"></script>
 </head>
 
