--- a/lesson2/design.html
+++ b/lesson2/design.html
@@ -5,7 +5,7 @@
     <meta name="description" content="A quick learning activity about web design pricniples">
     <meta name="author" content="Charles Ayim">
     <title>Web Design Principles</title>
-    <link rel="stylesheet" href="/lesson2/styles/design.css">
+    <link rel="stylesheet" href="styles/design.css">
 </head>
 <body>
     <header>
