--- a/lesson2/design.html
+++ b/lesson2/design.html
@@ -6,6 +6,7 @@
     <meta name="author" content="Charles Ayim">
     <title>Web Design Principles</title>
     <link rel="stylesheet" href="styles/design.css">
+    <link rel="stylesheet" href="styles/design.scss">
 </head>
 <body>
     <header>
