--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a class="sub_link"
                             href="https://payim.github.io/wdd230/lesson1/media-queries.html">Media Query</a>
                         <span class="divider">|</span>
-                        <a class="sub_link" href="#">JS Pen</a>
+                        <a class="sub_link" href="#"></a>
                     </li>
                     <li class="item">
                         <span class="sub_text">Week 2:</span>
