--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav class="nav">  
         <ul class="contents">
             <li class="item"><a class="page_link active" href="/">Home</a></li>
-            <li class="item"><a class="page_link" href="/chamber/index.html">Chamber</a></li>
+            <li class="item"><a class="page_link" href="https://payim.github.io/wdd230/chamber/index.html">Chamber</a></li>
             <li class="item"><a class="page_link" href="https://payim.github.io/wdd230/lesson1/chamber-site-plan.html">Site Plan</a></li>
             <li class="item"><a class="page_link" href="#">Survey</a></li>
         </ul>
