--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     </li>
                     <li class="item">
                         <span class="sub_text">Week 3:</span>
-                        <a class="sub_link"></a>
+                        <a href="https://payim.github.io/wdd230/lesson3/lazyload.html" class="sub_link">lazyload</a>
                     </li>
                     <li class="item">
                         <span class="sub_text">Week 4:</span>
