--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
         <div class="contents">
             <img class="profile_picture" src="images/my pic.webp"
-                alt="Profile" width="150" height="150">
+                alt="Profile" width="0" height="190">
             <h1 class="name">Charles Ayim</h1>
         </div>
     </header>
@@ -36,6 +36,12 @@
             <li class="item"><a class="page_link" href="#">Survey</a></li>
         </ul>
     </nav>
+    <picture class="hero-img">
+        <source media="(min-width: 400px)" srcset="images/accra_ghana_temple_lds.webp">
+        <source media="(min-width: 960px)" srcset="images/accra_ghana_temple_lds.webp">
+        <img src="/images/accra_ghana_temple_lds.webp" alt="hero-image" height="800" width="100">
+    </picture>
+
     <div id="mode">
         ☑️
     </div>
@@ -102,6 +108,13 @@
             </div>
         </section>
     </main>
+
+    <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19026.713351685758!2d-0.32570665260529963!3d5.552550738526964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb9a7f0829c925d61!2sJOY%20HILLS%20HOTEL!5e0!3m2!1sen!2sus!4v1667541846521!5m2!1sen!2sus"
+    width="500" height="450" style="border: 0;" allowfullscreen="" loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade">
+</iframe>
+
     <footer class="footer">
         <p class="text copyright">©<span id="year_container">2023</span> - Charles Ayim | Accra- Ghana</p>
         <p class="text last_modified" id="lastModified">Last Modification: 04/22/2023 06:45:30</p>
