--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,10 +17,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Noto+Serif&display=swap"rel="stylesheet">
     <link rel="icon" href="images/favicon (1).ico" type="icon">
-    <link rel="stylesheet" href="chamber/styles/normalize.css">
-    <link rel="stylesheet" href="chamber/styles/base.css">
-    <link rel="stylesheet" href="chamber/styles/medium.css">
-    <link rel="stylesheet" href="chamber/styles/larger.css">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/larger.css">
     
 </head>
 
@@ -37,7 +37,7 @@
     <header>
         <div class="header-content">
             <picture>
-                <a href="/chamber/index.html"><img src="images/logo 22.webp" alt="logo"></a>
+                <a href="index.html"><img src="images/logo 22.webp" alt="logo"></a>
             </picture>
             <section>
                 <h1> </h1>
