--- a/lesson3/lazyload.html
+++ b/lesson3/lazyload.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Progressive Loading images</title>
     <meta name="description" content="Progressive Loading images by CHARLES AYIM ">
-    <link rel="stylesheet" href="lesson3/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -56,6 +56,6 @@
         />
     </picture>
     </main>
-    <script src="lesson3/scripts/lazyload.js"></script>
+    <script src="scripts/lazyload.js"></script>
 </body>
 </html>
