--- a/lesson1/chamber-site-plan.html
+++ b/lesson1/chamber-site-plan.html
@@ -69,7 +69,7 @@
                     tourist place to visit while in Ghana.
                 </p>
                 <h2>Wire frames</h2>
-                <img src="/images/wireframe.png"
+                <img src="images/wireframe.png"
                 alt="Profile"  height="1500" width="1100">
             </div>
         </section>
