--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Charles Ayim- WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="icon" href="/favicon (1).ico">
+    <link rel="icon" href="favicon (1).ico">
 </head>
 
 <body>
