--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="styles/base.css">
         <link rel="stylesheet" href="styles/medium.css">
         <link rel="stylesheet" href="styles/larger.css">
-        <link rel="icon" href="/favicon (1).ico">
+        <link rel="icon" href="favicon (1).ico">
 
     <title>Chamber of Commerce | Discover</title>
 </head>
