--- a/chamber/index.html
+++ b/chamber/index.html
@@ -96,7 +96,8 @@
             <h4>Fwp Propose prescribed fire at lone pine state park to benefit navtive habitat </h4>
             This is an excellent company! I personally enjoyed the energy and the professional support the whole team gave to us
             into creating website. <br>
-            Their team are easy to work with and helped me make amazing websites in a short amount of time. Thanks again guys for
+            Their team are easy to work with and helped me make amazing websites 
+            in a short amount of time. Thanks again guys for
             all your hard work.
              </p>
             
