--- a/chamber/join.html
+++ b/chamber/join.html
@@ -72,7 +72,7 @@
             <fieldset>
                 <legend>Choose Membership</legend>
                 <label class="sbs"><input type="radio" name="membership" value="nonprofit"> NON-PROFIT | Free</label>
-                <p>Unique to non-profits, expand your organizations reach by joining the Kalispell Chamber
+                <p>Unique to non-profits, expand your organizations reach by joining the Redemption Chamber
                     to gain access to many of the valley's other top community-focused businesses.</p>
                 <label class="sbs"><input type="radio" name="membership" value="bronze"> BRONZE | $390</label>
                 <p>Get Established! Bronze memberships are recommended for businesses with 1-2 employees
