--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         height="40">
                     <span class="text weather_text">26°C, Cloudy</span>
                 </div>
-                <p class="text visit_count">Page Visits: <span id="visit_count">70</span></p>
+                <p class="text visit_count">Page Visits: <span id="visit_counter">100</span></p>
             </div>
         </section>
         <iframe
@@ -125,10 +125,9 @@
     </main>
     <footer class="footer">
         <p class="text copyright">©<span id="year_container">2023</span> - Charles Ayim | Accra- Ghana</p>
-        <p class="text last_modified" id="lastModified">Last Modification: 04/22/2023 06:45:30</p>
+        <p class="text last_modified" id="lastModified">Last Modification: 06/16/2023 12:45:30</p>
     </footer>
     <script src="scripts/main.js"></script>
-    <script src="scripts/getDates.js"></script>
+    <script src="scripts/getDate.js"></script>
 </body>
-
 </html>
