--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </li>
                     <li class="item">
                         <span class="sub_text">Week 5:</span>
-                        <a class="sub_link"></a>
+                        <a href="https://payim.github.io/wdd230/lesson5/prophets.html" class="sub_link">latter-day-prophets </a>
                     </li>
                     <li class="item">
                         <span class="sub_text">Week 6:</span>
