--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -65,46 +65,12 @@
     </header>
 
 
-    <main id="join-form">
-
-        <h2>Redemption Chamber of Commerce Application Form</h2>
-        <form method="get" action="thankyou.html">
-            <fieldset>
-                <legend>Choose Membership</legend>
-                <label class="sbs"><input type="radio" name="membership" value="nonprofit"> NON-PROFIT | Free</label>
-                <p>Unique to non-profits, expand your organizations reach by joining the Redemption Chamber
-                    to gain access to many of the valley's other top community-focused businesses.</p>
-                <label class="sbs"><input type="radio" name="membership" value="bronze"> BRONZE | $390</label>
-                <p>Get Established! Bronze memberships are recommended for businesses with 1-2 employees
-                    and are intended for startups and new businesses. Bronze membership is a great stepping
-                    stone to business success. Join to begin building name recognition and rapport with other
-                    business leaders in the community.</p>
-                <label class="sbs"><input type="radio" name="membership" value="silver"> SILVER | $640</label>
-                <p>Marketing & Networking! Silver Memberships are recommended for businesses with 2-5
-                    employees and are for established businesses looking to grow. This level is ideal
-                    for a business wanting to gain exposure and build community awareness. Silver membership
-                    offers all of the benefits of the Bronze level, plus additional marketing tools and benefits.
-                    Silver membership includes 4 Luncheon tickets.</p>
-                <label class="sbs"><input type="radio" name="membership" value="gold"> GOLD | $1,150</label>
-                <P>Business Development - Gold memberships are for established businesses working to become
-                    leaders in the Flathead Valley. Increase visibility - this level includes additional marketing
-                    opportunities. Gold membership includes 8 Luncheon tickets.</P>
-            </fieldset>
-
-            <fieldset>
-                <legend>Enter Contact Information</legend>
-                <label class="top">First Name: <input type="text" name="fname" required></label>
-                <label class="top">Last Name: <input type="text" name="lname" required></label>
-                <label class="top">Business Position: <input type="text" name="position" pattern="[a-zA-Z0-9]+{7-50}"></label>
-                <label class="top">E-mail: <input type="email" name="email" placeholder="Example787@gmail.com" required></label>
-                <label class="top">Cellphone no.: <input type="tel" name="phone" required></label>
-                <label class="top">Business Name: <input type="text" name="businessName" required></label>
-                <label class="top">Business Description: <textarea placeholder="Type here"
-                        name="description"></textarea></label>
-            </fieldset>
-
-            <input type="submit" value="Join The Chamber" class="submitBtn">
-        </form>
+    <main class="thanks-page">
+        <div>
+          <h3><p>Thank you for joining Redemption Chamber of Commerce</p>
+            <p>we will be in contact with you!</p></h3>
+            <a class="btn-yellow" href="join.html">back</a>
+        </div>
     </main>
 
     <footer>
