--- a/chamber/index.html
+++ b/chamber/index.html
@@ -132,11 +132,11 @@
                     </p>
                     </ul>
             </div>
-            <button onclick="window.location.href='join.html';">Visit Today</button>
+            <button onclick="window.location.href='discover.html';">Visit Today</button>
             <p>Hundreds of businesses and professionals get added everyday. Don't be left behind!</p>
             <picture><img src="images/tobias-nii-kwatei-quartey-rpcCF2Asrx8-unsplash.jpg" alt="chamber-employees"></picture>
             <h3>Connect With Us</h3>
-            <button onclick="window.location.href='join.html';">Contact Now</button>
+            <button onclick="window.location.href='contact.html';">Contact Now</button>
             <p>#REDEMPTIONCHAMBER</p>
         </div>
 
