--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -37,7 +37,7 @@
     <header>
         <div class="header-content">
         <picture>
-            <a href="index.html"><img src="images/logo 22.webp" alt="logo"></a>
+            <a href="index.html"><img src="images/Group 2.jpg" alt="logo"></a>
         </picture>
             <section>
                
@@ -101,7 +101,7 @@
     <footer>
         <div class="footer-content">
             <div>
-                <a href="index.html"><img src="images/logo 22.webp" alt="logo"></a>
+                <a href="index.html"><img src="images/Group 2.jpg" alt="logo"></a>
             </div>
             <div>
                 <h3> Redemption Chamber of Commerce</h3>
