--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,7 +34,7 @@
     <header>
         <div class="header-content">
             <picture>
-                <a href="index.html"><img src="images/logo 22.webp" alt="logo"></a>
+                <a href="index.html"><img src="images/Group 2.jpg" alt="logo"></a>
             </picture>
             <section>
                 <h1></h1>
@@ -214,7 +214,7 @@
     <footer>
         <div class="footer-content">
             <div>
-                <a href="index.html"><img src="images/logo 22.webp" alt="logo"></a>
+                <a href="index.html"><img src="images/Group 2.jpg" alt="logo"></a>
             </div>
             <div>
                 <h3>Redemption Chamber of Commerce</h3>
