--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,7 +36,7 @@
     <header>
         <div class="header-content">
             <picture>
-                <a href="index.html"><img src="images/logo 22.webp" alt="logo"></a>
+                <a href="index.html"><img src="images/Group 2.jpg" alt="logo"></a>
             </picture>
             <section>
                 <h1> </h1>
@@ -199,7 +199,7 @@
     <footer>
         <div class="footer-content">
             <div>
-                <picture><img src="images/logo 22.webp"logo></picture>
+                <picture><img src="images/Group 2.jpg"logo></picture>
             </div>
             <div>
                 <h3> Redemption Chamber of Commerce</h3>
