--- a/chamber/join.html
+++ b/chamber/join.html
@@ -36,7 +36,7 @@
     <header>
         <div class="header-content">
         <picture>
-            <a href="index.html"><img src="images/logo 22.webp" alt="logo"></a>
+            <a href="index.html"><img src="images/Group 2.jpg" alt="logo"></a>
         </picture>
             <section>
                 <a href="https://www.facebook.com/"><img class="social-media" src="images/facebook-logo-2019.png"
@@ -110,7 +110,7 @@
     <footer>
         <div class="footer-content">
             <div>
-                <a href="index.html"><img src="images/logo 22.webp" alt="logo"></a>
+                <a href="index.html"><img src="images/Group 2.jpg" alt="logo"></a>
             </div>
             <div>
                 <h3> Redemption Chamber of Commerce</h3>
