--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
         <section class="card information">
             <h3 class="title">Information</h3>
             <div class="text_contents">
-                <p class="text location">Accra, Ghana</p>
-                <div class="weather">
-                    <img class="weather_icon" src="images/cloud 1.svg" alt="weather icon" width="40"
-                        height="40">
-                    <span class="text weather_text">26°C, Cloudy</span>
-                </div>
+               <h4> <p class="text location">Accra, Ghana</p></h4>
+               <img class="weather_icon" src="images/cloud 1.svg" alt="weather icon" width="40" height="40">
+               <span class="text weather_text">53°C, Cloudy</span>
+                <p>current wind speed is <span id="speed">3.02</span> mph</p>
+                <p class="weather-link">Data provided by: <a href="https://openweathermap.org/">openweathermap.org</a></p>
+                <div class="weather">    
                 <p class="text visit_count">Page Visits: <span id="visit_counter">100</span></p>
             </div>
         </section>
@@ -129,5 +129,7 @@
     </footer>
     <script src="scripts/main.js"></script>
     <script src="scripts/getDate.js"></script>
+    <script src="scripts/weather.js"></script>
+
 </body>
 </html>
